# VAD

./: CMakeLists.txt  README.md
frequency/: FrequencyScreening.py  audio_operation.ipynb  value.txt
lib/: libsndfile.so.1.0.28
vad_c/lib/: libfvad.so.0.0.0
